Fix card dimensions on mobile

--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -18,7 +18,7 @@
 
 @media only screen and (max-width: 670px) {
   .card { 
-    margin: 1.5% 1%;
+    margin: 4% 5%;
     width: 100%;
     min-height: 220px;
     position: relative;
